# IndiaRuns-Data-challenge

./: .gitignore  Dockerfile  MEMBER4_HANDOVER.txt  README.md  config.yaml  docker-compose.yml  member3_analysis.py  precompute.py  pyproject.toml  rank.py  requirements.txt  submission.csv  submission_metadata.yaml  train.py  utils.py  validate_submission.py
configs/: app.py  embeddings.yaml  parser.yaml  ranker.yaml  scoring.yaml  weights.yaml
docs/: architecture.md  integration_guide.md
embeddings/: __init__.py  cache.py  encoder.py  faiss_builder.py  generator.py  models.py  retriever.py  similarity.py  text_builder.py
evaluation/: metrics.py
feature_engineering/: builder.py  company_features.py  experience_features.py  feature_vector.py  skill_features.py
ingestion/: candidate_loader.py  jd_loader.py  normalizer.py  schema.py  validators.py
member1_processor/: loader.py  matching_engine.py  parser.py  schemas.py
member3/: __init__.py  reasoning_engine.py  scoring_features.py  timeline_validation.py
orchestrator/: __init__.py  main.py  models.py  storage.py
preprocessing/: clean_text.py  normalize_skills.py  normalize_titles.py
ranking/: __init__.py  calibration.py  catboost_ranker.py  feature_engineering.py  feature_vector.py  final_rank.py  lightgbm_ranker.py  reranker.py  score_combiner.py  scorer.py
reasoning/: reasoning_engine.py
scripts/: benchmark_ranker.py  build_faiss.py  generate_embeddings.py  train_ranker.py
submission/: csv_writer.py
tests/: test_app.py  test_encoder.py  test_features.py  test_ranker.py  test_retriever.py
(+20 files in other folders)
